.storybook/assets/base.css
/*!
 * Copyright 2023 Adobe. All rights reserved.
 *
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at <http://www.apache.org/licenses/LICENSE-2.0>
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

body {
	margin: 0;
	background-color: var(--spectrum-background-layer-2-color);
	color: var(--spectrum-neutral-content-color-default);

	font-family: var(--spectrum-sans-font-family-stack);
	font-style: var(--spectrum-default-font-style);
	font-size: 16px;
}

.spectrum {
	/* ---- Storybook only custom properties ---- */
	/* Gradient that changes with the color theme. */
	--spectrum-examples-gradient: linear-gradient(45deg, var(--spectrum-magenta-1500), var(--spectrum-blue-1500));
	/* Gradients that do not change with the color theme, for use in static color backgrounds. */
	--spectrum-examples-gradient-static-black: linear-gradient(45deg, rgb(255, 241, 246), rgb(238, 245, 255));
	--spectrum-examples-gradient-static-white: linear-gradient(45deg, rgb(64, 0, 22), rgb(14, 24, 67));

	background-color: var(--spectrum-background-layer-1-color);

	/* @todo: add back the text color and update VRTs */
	/* color: var(--spectrum-neutral-content-color-default); */
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0%);
}

.spectrum .spectrum-examples-static-black {
	background: var(--spectrum-examples-gradient-static-black);
}

.spectrum .spectrum-examples-static-white {
	background: var(--spectrum-examples-gradient-static-white)
}

/* Hide the SVG elements that only include references */
svg:has(symbol):not(:has(use)) {
	display: none;
}

